Changed search bar in market.html to use block elements to fix some spacing issues. Updated market.css

--- a/css/market.css
+++ b/css/market.css
@@ -44,6 +44,7 @@ body {
     padding: 0px;
     font-weight: bold;
     pointer-events: none;
+    
 }
 /* Removes hyperlink color for menu buttons and turns to white. */
 .navButtonText, .loginOrSignupButtonText{
@@ -195,7 +196,7 @@ body {
 
 /*--------------------------------------------------------------------------*/
 
-#searchBar {
+#searchAndFilterContainer {
     position: relative;
     background-image: url("../images/woodenboard.jpg");
     background-size: auto 100%;
@@ -206,60 +207,59 @@ body {
 }
 
 #searchContainer {
-    position: relative;
-    width: 50%;
-    top: 30%;
+    margin-top: 33px;
+    width: 65%;
     margin-left: 5%;
 }
-#search {
-    position: absolute;
-    left: 15%;
-    width: 85%;
-    height: 25px;
+#searchBar {
+    margin-left: 0px;
+    width: 65%;
+    height: 30px;
+    font-size: 13pt;
     outline: none;
     border: 3px solid #79A83C;
-    border-right: 5px solid #79A83C;
-    border-radius: 5px;
+    float: left;
 }
 #searchButton {
-    right: -5%;
-    top: 0px;
-    position: absolute;
     cursor: pointer;
     background-color: #79A83C;
     border: 3px solid #79A83C;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
-    height: 33.5px;
+    height: 38px;
     outline: none;
+    width: 40px;
+    float: left;
 }
 #searchIcon {
     filter: contrast(1000%);
-    width: 25px;
-    height: 25px;
+    width: 100%;
+    height: 26px;
 }
-#search[type=text]{
+#searchBar[type=text]{
     padding-left: 10px;
 }
 
 
 #selectMenu {
-    position: relative;
     border: 3px solid #79A83C;
-    height: 33.5px;
+    border-radius: 5px 0px 0px 5px;
+    height: 38px;
+    font-size: 13pt;
+    border-right: 0px;
+    float: left;
 }
 
 #locationContainer {
-    position: relative;
-    top: 15px;
+    margin-top: 15px;
     margin-right: 5%;
-    width: 210px;
+    width: 20%;
     float: right;
     text-align: center;
 }
 
 #sliderBody {
-    width: 200px;
+    width: 100%;
     height: 20%;                                                                                                                                                                                                                
 }
 #sliderBody::-webkit-slider-thumb {
@@ -278,6 +278,7 @@ body {
     float: right;
 }
 #locationText { 
+    font-size: 14pt;
 }
 
 /* Layout for a listing */
@@ -306,6 +307,7 @@ body {
     display: block;
     float: left;
     width: 100%;
+    height: 3em;
 }
 
 .item {
@@ -326,11 +328,15 @@ body {
 
 .itemByUser {
     float: left;
-    font-size: 14pt;
+    font-size: 12pt;
+    color: rgb(112, 112, 112);
+    font-style: italic;
 }
 
 .itemPostedOn {
     float: right;
-    font-size: 14pt;
+    font-size: 12pt;
+    color: rgb(112, 112, 112);
+    font-style: italic;
 }
 
